# pathtrace

./: CMakeLists.txt
.cache/clangd/index/: camera.cpp.CFAC26C0189C6078.idx  camera.cpp.EC4D02F3CCEF5878.idx  camera.h.33C9F0A66A105343.idx  camera.h.39BBEA7DF93D1516.idx  cm_math.cpp.8A6F46ED30377A4D.idx  cm_math.cpp.C54E39152003E6D3.idx  cm_math.h.0446BB78A041383D.idx  cm_math.h.AA73EA6900D023E1.idx  color.h.9C81D98F760B2044.idx  color.h.ECE7C21435A2683E.idx  hitinfo.h.91328036FA40B151.idx  hitinfo.h.FB47AEF920FCA568.idx  main.cpp.9CA1ABA040DD42ED.idx  main.cpp.E0E645710861D9C2.idx  material.h.78DB385694AFD809.idx  material.h.7AC028F7493B892B.idx  platform.cpp.33261753454D3069.idx  platform.cpp.613D9D18BEE27658.idx  platform.h.29BC1E2101BCFA20.idx  platform.h.3A8020410E97D5D3.idx  quaternion.cpp.4BCEA2774AC1E418.idx  quaternion.cpp.6318118A101F8E4B.idx  quaternion.h.980EDD673D3F5607.idx  quaternion.h.F676F1D1CFF1B58B.idx  random.h.7EE9493813B6A6FF.idx  random.h.B6F8A403A824996C.idx  ray.h.4C5072D3748C6A84.idx  ray.h.8CB638FACBF87D8F.idx  sphere.cpp.0DE7688C907EBD6F.idx  sphere.cpp.D1942D6454960C95.idx  sphere.h.37905073A0C185B8.idx  sphere.h.481849D35978E3D7.idx  tracer.cpp.20DC609FC1FE58E6.idx  tracer.cpp.B37A1F5882C46A2D.idx  tracer.h.0ED36C4F3E55B848.idx  tracer.h.1EE7BB31A042BC90.idx  transform.h.5E0CBE6428FCE3B2.idx  transform.h.9093A2CE0C2F6AE8.idx  vec3.cpp.5554448E234C1907.idx  vec3.cpp.8FBCB98CD7BB2B06.idx  (+6 more)
src/: .main.cpp.swp  3q  ]  camera.cpp  camera.h  cm_math.cpp  cm_math.h  color.h  hitinfo.h  main.cpp  material.h  platform.cpp  platform.h  quaternion.cpp  quaternion.h  random.h  ray.h  sphere.cpp  sphere.h  tracer.cpp  tracer.h  transform.cpp  transform.h  vec3.cpp  vec3.h  world.cpp  world.h
